[gd_scene load_steps=7 format=2]

[ext_resource path="res://Nodes/UI/RichTextLabel.gd" type="Script" id=1]
[ext_resource path="res://Nodes/UI/Weather.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Weather/night.png" type="Texture" id=3]
[ext_resource path="res://Nodes/UI/InventoryManager.gd" type="Script" id=4]
[ext_resource path="res://Nodes/UI/Slot.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "nightfall"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Main CanvasLayer" type="CanvasLayer"]

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
color = Color( 0.176471, 0.176471, 0.176471, 1 )
polygon = PoolVector2Array( 32, 576, 32, 480, 992, 480, 992, 576 )

[node name="RichTextLabel" type="RichTextLabel" parent="Polygon2D"]
margin_left = 64.0
margin_top = 512.0
margin_right = 960.0
margin_bottom = 552.0
rect_scale = Vector2( 2, 2 )
text = "what up gamer lemme see that gamer card real quick"
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="Polygon2D"]
wait_time = 0.08

[node name="Weather" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Night" type="Sprite" parent="Weather"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 512, 298 )
scale = Vector2( 1.28, 1.03333 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Weather/Night"]
anims/nightfall = SubResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 480.0
margin_top = 512.0
margin_right = 520.0
margin_bottom = 552.0

[node name="Inventory Manager" type="HBoxContainer" parent="CenterContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 20.0
alignment = 1
script = ExtResource( 4 )

[node name="Slot1" parent="CenterContainer/Inventory Manager" instance=ExtResource( 5 )]

[node name="Slot2" parent="CenterContainer/Inventory Manager" instance=ExtResource( 5 )]
position = Vector2( -20, 12 )

[node name="Slot3" parent="CenterContainer/Inventory Manager" instance=ExtResource( 5 )]
position = Vector2( 44, 12 )
[connection signal="timeout" from="Polygon2D/Timer" to="Polygon2D/RichTextLabel" method="_on_Timer_timeout"]
